--- a/style/media.css
+++ b/style/media.css
@@ -16,6 +16,9 @@
     .about__work {
         background: var(--main-color);
     }
+    .list-group-item{
+        box-shadow: 0px 0px 5px 3px rgba(113, 119, 241, 0.15)
+    }
 }
 
 @media(max-width:1440px) {
@@ -34,7 +37,8 @@
     }
 }
 @media(max-width:991px) {
-
+    .about::after,
+    .about::before,
     .header__bottom::before,
     .header__bottom::after,
     .header__nav::before,
